# ComfyUI-PersianText

./: LICENSE  PersianText.py  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  update-version-json.yml
utils/: colors.py
