[project]
name = "PersianText"
description = "A powerful ComfyUI node for rendering text with advanced styling options, including full support for Persian/Farsi and Arabic scripts."
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "Pillow", "arabic-reshaper", "torchvision", "python-bidi"]

[project.urls]
Repository = "https://github.com/shahkoorosh/ComfyUI-PersianText"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shahkoorosh"
DisplayName = "ComfyUI-PersianText"
Icon = ""
